* fix date formatting * fix card info alignment

--- a/src/components/CoinCard.sass
+++ b/src/components/CoinCard.sass
@@ -25,6 +25,7 @@ $b-radius: .5rem
       background: $block
 
   .card-main
+    text-align: center
     font-weight: 500
     background: $card-bg
     padding: 1rem 1.5rem
@@ -42,6 +43,13 @@ $b-radius: .5rem
     overflow: hidden
 
   .card-info
-    flex: 1
     display: flex
-    flex-direction: column
+    justify-content: space-around
+    flex: 1
+      direction: column
+    .coin-price
+      font-size: 21px
+    .coin-expiry-date
+      font-size: 13px
+
+        
